[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptforge-cli"
version = "0.1.0"
description = "Prompt and system-message versioning toolkit"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
promptforge-cli = "promptforge_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
